--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compat": "^3.2.38",
+    "@vue/compiler-sfc": "^3.2.38",
     "core-js": "^3.6.5",
     "firebase": "^8.7.1",
+    "latest": "^0.2.0",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue": "^3.2.38",
+    "vue-router": "^4.1.5",
     "vue-svg-loader": "^0.16.0",
-    "vue2-editor": "^2.10.2",
-    "vuex": "^3.4.0"
+    "vue3-editor": "^0.1.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -26,9 +29,8 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^9.4.0",
     "sass": "^1.54.7",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass-loader": "^8.0.2"
   }
 }
