--- a/package.json
+++ b/package.json
@@ -8,28 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.18.9",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/compat": "^3.2.38",
     "@vue/compiler-sfc": "^3.2.38",
     "core-js": "^3.6.5",
+    "eslint": "^8.23.0",
+    "eslint-plugin-vue": "^9.4.0",
     "firebase": "^8.7.1",
     "latest": "^0.2.0",
+    "node-fetch": "^2.6.1",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^3.2.38",
+    "vue-loader": "^15.10.0",
     "vue-router": "^4.1.5",
-    "vue-svg-loader": "^0.16.0",
     "vue3-editor": "^0.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "sass": "^1.54.7",
     "sass-loader": "^8.0.2"
   }
